--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.2",
-    "@angular/cdk": "~7.3.7",
+    "@angular/cdk": "~8.0.1",
     "@angular/common": "~8.0.2",
     "@angular/compiler": "~8.0.2",
     "@angular/core": "~8.0.2",
     "@angular/forms": "~8.0.2",
-    "@angular/material": "^7.3.7",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~8.0.2",
     "@angular/platform-browser-dynamic": "~8.0.2",
     "@angular/router": "~8.0.2",
-    "@ngrx/effects": "^7.0.1",
-    "@ngrx/store": "^7.0.1",
-    "@ngrx/store-devtools": "^7.0.1",
+    "@ngrx/effects": "^8.0.1",
+    "@ngrx/store": "^8.0.1",
+    "@ngrx/store-devtools": "^8.0.1",
     "@terminus/ngx-tools": "^7.0.1",
     "@terminus/ui": "14.0.3",
     "core-js": "^2.5.4",
@@ -34,16 +34,16 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.9",
+    "@angular-devkit/build-angular": "^0.800.3",
     "@angular/cli": "~8.0.3",
     "@angular/compiler-cli": "~8.0.2",
-    "@angular/flex-layout": "7.0.0-beta.23",
+    "@angular/flex-layout": "8.0.0-beta.26",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.4.5"
+    "typescript": "3.4.5"
   }
 }
