--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@ngrx/effects": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
-    "@terminus/ngx-tools": "^7.0.1",
-    "@terminus/ui": "14.0.3",
+    "acorn": "^6.2.0",
     "core-js": "^2.5.4",
     "date-fns": "2.0.0-alpha.16",
     "hammerjs": "^2.0.8",
